--- a/react-by-programming-hero/simple-ecomerce/src/index.css
+++ b/react-by-programming-hero/simple-ecomerce/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,17 +12,17 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
+} */
 
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
 }
 
-h1 {
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
@@ -57,4 +57,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */ */
